# docs/openapi.yaml
@@ -79,6 +79,24 @@ paths:
       responses:
         "200":
           description: OK
+  /api/v1/auth/refresh:
+    post:
+      tags:
+      - auth-controller
+      operationId: refresh
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/RefreshTokenRequest"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/LoginResponse"
   /api/v1/auth/login/user:
     post:
       tags:
@@ -483,6 +501,25 @@ components:
       required:
       - newPassword
       - token
+    RefreshTokenRequest:
+      type: object
+      properties:
+        refreshToken:
+          type: string
+      required:
+      - refreshToken
+    LoginResponse:
+      type: object
+      properties:
+        accessToken:
+          type: string
+        refreshToken:
+          type: string
+        tokenType:
+          type: string
+        expiresIn:
+          type: integer
+          format: int64
     UserLoginRequest:
       type: object
       properties:
@@ -493,16 +530,6 @@ components:
       required:
       - password
       - username
-    LoginResponse:
-      type: object
-      properties:
-        accessToken:
-          type: string
-        tokenType:
-          type: string
-        expiresIn:
-          type: integer
-          format: int64
     AgentLoginRequest:
       type: object
       properties:
